--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,4 @@ PyQt6
 PyQt6-WebEngine
 plyer   # does not work in macos!!
 pync    # works in macos
-
+superqt       # A range slider for cutting files
