switch from youtube-dl library to yt-dlp, as the first one fails to work as of June 23.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-youtube-dl                  # for downloading videos
+# youtube-dl                # for downloading youtube videos. Asof 202306: fails to work
+yt-dlp                      # for downloading youtube videos
 youtube-search-python       # for searching youtube by name
 pynormalize                 # for normalizing volume of mp3 files
 
